// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid rendering render 1`] = `
"+-------------------+
| [105m[30m3[39m[49m   [105m[30m3[39m[49m   [105m[30m3[39m[49m   [105m[30m3[39m[49m   [105m[30m3[39m[49m |
+-------------------+
| [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m |
+-------+   +-------+
| [32m1[39m   [32m1[39m | [42m[30m2[39m[49m | [104m[30m0[39m[49m   [104m[30m0[39m[49m |
|       +---+       |
| [32m1[39m   [32m1[39m   [32m1[39m | [104m[30m0[39m[49m   [104m[30m0[39m[49m |
|       +---+       |
| [32m1[39m   [32m1[39m | [104m[30m0[39m[49m   [104m[30m0[39m[49m   [104m[30m0[39m[49m |
+-------+-----------+

room 0 size=7 cells=13,14,18,19,22,23,24
room 1 size=7 cells=10,11,15,16,17,20,21
room 2 size=6 cells=5,6,7,8,9,12
room 3 size=5 cells=0,1,2,3,4"
`;

exports[`Grid rendering render 2`] = `
"+-------------------+
| 3   3   3   3   3 |
+-------------------+
| 2   2   2   2   2 |
+-------+   +-------+
| 1   1 | 2 | 0   0 |
|       +---+       |
| 1   1   1 | 0   0 |
|       +---+       |
| 1   1 | 0   0   0 |
+-------+-----------+

room 0 size=7 cells=13,14,18,19,22,23,24
room 1 size=7 cells=10,11,15,16,17,20,21
room 2 size=6 cells=5,6,7,8,9,12
room 3 size=5 cells=0,1,2,3,4"
`;

exports[`Grid rendering render 3`] = `
"+-----------------------+---------------+
| [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m | [34m3[39m   [34m3[39m   [34m3[39m   [34m3[39m |
|   +---+               +---+           |
| [42m[30m2[39m[49m | [33m1[39m | [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m   [42m[30m2[39m[49m | [34m3[39m   [34m3[39m   [34m3[39m |
+---+   +-------+   +-------+           |
| [33m1[39m   [33m1[39m   [33m1[39m   [33m1[39m | [42m[30m2[39m[49m | [94m0[39m   [94m0[39m | [34m3[39m   [34m3[39m   [34m3[39m |
|               |   |       +---+   +---+
| [33m1[39m   [33m1[39m   [33m1[39m   [33m1[39m | [42m[30m2[39m[49m | [94m0[39m   [94m0[39m   [94m0[39m | [34m3[39m | [94m0[39m |
|               +---+           +---+   |
| [33m1[39m   [33m1[39m   [33m1[39m   [33m1[39m   [33m1[39m | [94m0[39m   [94m0[39m   [94m0[39m   [94m0[39m   [94m0[39m |
+-------------------+-------------------+

room 0 size=11 cells=25,26,35,36,37,39,45,46,47,48,49
room 1 size=14 cells=11,20,21,22,23,30,31,32,33,40,41,42,43,44
room 2 size=14 cells=0,1,2,3,4,5,10,12,13,14,15,16,24,34
room 3 size=11 cells=6,7,8,9,17,18,19,27,28,29,38"
`;

exports[`Grid rendering render 4`] = `
"+-----------------------+---------------+
| 2   2   2   2   2   2 | 3   3   3   3 |
|   +---+               +---+           |
| 2 | 1 | 2   2   2   2   2 | 3   3   3 |
+---+   +-------+   +-------+           |
| 1   1   1   1 | 2 | 0   0 | 3   3   3 |
|               |   |       +---+   +---+
| 1   1   1   1 | 2 | 0   0   0 | 3 | 0 |
|               +---+           +---+   |
| 1   1   1   1   1 | 0   0   0   0   0 |
+-------------------+-------------------+

room 0 size=11 cells=25,26,35,36,37,39,45,46,47,48,49
room 1 size=14 cells=11,20,21,22,23,30,31,32,33,40,41,42,43,44
room 2 size=14 cells=0,1,2,3,4,5,10,12,13,14,15,16,24,34
room 3 size=11 cells=6,7,8,9,17,18,19,27,28,29,38"
`;

exports[`Grid rendering render 5`] = `
"+-------------------+
| [93m3[39m   [93m3[39m   [93m3[39m   [93m3[39m   [93m3[39m |
|                   |
| [93m3[39m   [93m3[39m   [93m3[39m   [93m3[39m   [93m3[39m |
+---+           +---+
| [36m2[39m | [93m3[39m   [93m3[39m   [93m3[39m | [36m2[39m |
|   +-----------+   |
| [36m2[39m   [36m2[39m   [36m2[39m   [36m2[39m   [36m2[39m |
|           +-------+
| [36m2[39m   [36m2[39m   [36m2[39m | [43m[30m1[39m[49m   [43m[30m1[39m[49m |
|       +---+       |
| [36m2[39m   [36m2[39m | [106m[30m0[39m[49m | [43m[30m1[39m[49m   [43m[30m1[39m[49m |
|   +---+   |       |
| [36m2[39m | [106m[30m0[39m[49m   [106m[30m0[39m[49m | [43m[30m1[39m[49m   [43m[30m1[39m[49m |
+---+       |       |
| [106m[30m0[39m[49m   [106m[30m0[39m[49m   [106m[30m0[39m[49m | [43m[30m1[39m[49m   [43m[30m1[39m[49m |
|       +---+       |
| [106m[30m0[39m[49m   [106m[30m0[39m[49m | [43m[30m1[39m[49m   [43m[30m1[39m[49m   [43m[30m1[39m[49m |
|       +---+       |
| [106m[30m0[39m[49m   [106m[30m0[39m[49m   [106m[30m0[39m[49m | [43m[30m1[39m[49m   [43m[30m1[39m[49m |
+-----------+-------+

room 0 size=11 cells=27,31,32,35,36,37,40,41,45,46,47
room 1 size=13 cells=23,24,28,29,33,34,38,39,42,43,44,48,49
room 2 size=13 cells=10,14,15,16,17,18,19,20,21,22,25,26,30
room 3 size=13 cells=0,1,2,3,4,5,6,7,8,9,11,12,13"
`;

exports[`Grid rendering render 6`] = `
"+-------------------+
| 3   3   3   3   3 |
|                   |
| 3   3   3   3   3 |
+---+           +---+
| 2 | 3   3   3 | 2 |
|   +-----------+   |
| 2   2   2   2   2 |
|           +-------+
| 2   2   2 | 1   1 |
|       +---+       |
| 2   2 | 0 | 1   1 |
|   +---+   |       |
| 2 | 0   0 | 1   1 |
+---+       |       |
| 0   0   0 | 1   1 |
|       +---+       |
| 0   0 | 1   1   1 |
|       +---+       |
| 0   0   0 | 1   1 |
+-----------+-------+

room 0 size=11 cells=27,31,32,35,36,37,40,41,45,46,47
room 1 size=13 cells=23,24,28,29,33,34,38,39,42,43,44,48,49
room 2 size=13 cells=10,14,15,16,17,18,19,20,21,22,25,26,30
room 3 size=13 cells=0,1,2,3,4,5,6,7,8,9,11,12,13"
`;

exports[`Grid rendering render 7`] = `
"+---------------------------------------+
| [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m |
|                                       |
| [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m |
+-----------+                       +---+
| [106m[30m2[39m[49m   [106m[30m2[39m[49m   [106m[30m2[39m[49m | [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m | [93m1[39m |
|           +-----------+   +---+---+   |
| [106m[30m2[39m[49m   [106m[30m2[39m[49m   [106m[30m2[39m[49m   [106m[30m2[39m[49m   [106m[30m2[39m[49m   [106m[30m2[39m[49m | [32m3[39m | [106m[30m2[39m[49m | [93m1[39m   [93m1[39m |
|                       +---+   |       |
| [106m[30m2[39m[49m   [106m[30m2[39m[49m   [106m[30m2[39m[49m   [106m[30m2[39m[49m   [106m[30m2[39m[49m   [106m[30m2[39m[49m   [106m[30m2[39m[49m   [106m[30m2[39m[49m | [93m1[39m   [93m1[39m |
|               +-------+-------+       |
| [106m[30m2[39m[49m   [106m[30m2[39m[49m   [106m[30m2[39m[49m   [106m[30m2[39m[49m | [36m0[39m   [36m0[39m | [93m1[39m   [93m1[39m   [93m1[39m   [93m1[39m |
+---+   +---+   +---+   |               |
| [36m0[39m | [106m[30m2[39m[49m | [36m0[39m | [106m[30m2[39m[49m   [106m[30m2[39m[49m | [36m0[39m | [93m1[39m   [93m1[39m   [93m1[39m   [93m1[39m |
|   +---+   +-------+   |               |
| [36m0[39m   [36m0[39m   [36m0[39m   [36m0[39m   [36m0[39m   [36m0[39m | [93m1[39m   [93m1[39m   [93m1[39m   [93m1[39m |
|                   +---+               |
| [36m0[39m   [36m0[39m   [36m0[39m   [36m0[39m   [36m0[39m | [93m1[39m   [93m1[39m   [93m1[39m   [93m1[39m   [93m1[39m |
|                   +---+               |
| [36m0[39m   [36m0[39m   [36m0[39m   [36m0[39m   [36m0[39m   [36m0[39m | [93m1[39m   [93m1[39m   [93m1[39m   [93m1[39m |
+-----------------------+---------------+

room 0 size=22 cells=54,55,60,62,65,70,71,72,73,74,75,80,81,82,83,84,90,91,92,93,94,95
room 1 size=26 cells=29,38,39,48,49,56,57,58,59,66,67,68,69,76,77,78,79,85,86,87,88,89,96,97,98,99
room 2 size=25 cells=20,21,22,30,31,32,33,34,35,37,40,41,42,43,44,45,46,47,50,51,52,53,61,63,64
room 3 size=27 cells=0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,23,24,25,26,27,28,36"
`;

exports[`Grid rendering render 8`] = `
"+---------------------------------------+
| 3   3   3   3   3   3   3   3   3   3 |
|                                       |
| 3   3   3   3   3   3   3   3   3   3 |
+-----------+                       +---+
| 2   2   2 | 3   3   3   3   3   3 | 1 |
|           +-----------+   +---+---+   |
| 2   2   2   2   2   2 | 3 | 2 | 1   1 |
|                       +---+   |       |
| 2   2   2   2   2   2   2   2 | 1   1 |
|               +-------+-------+       |
| 2   2   2   2 | 0   0 | 1   1   1   1 |
+---+   +---+   +---+   |               |
| 0 | 2 | 0 | 2   2 | 0 | 1   1   1   1 |
|   +---+   +-------+   |               |
| 0   0   0   0   0   0 | 1   1   1   1 |
|                   +---+               |
| 0   0   0   0   0 | 1   1   1   1   1 |
|                   +---+               |
| 0   0   0   0   0   0 | 1   1   1   1 |
+-----------------------+---------------+

room 0 size=22 cells=54,55,60,62,65,70,71,72,73,74,75,80,81,82,83,84,90,91,92,93,94,95
room 1 size=26 cells=29,38,39,48,49,56,57,58,59,66,67,68,69,76,77,78,79,85,86,87,88,89,96,97,98,99
room 2 size=25 cells=20,21,22,30,31,32,33,34,35,37,40,41,42,43,44,45,46,47,50,51,52,53,61,63,64
room 3 size=27 cells=0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,23,24,25,26,27,28,36"
`;

exports[`Grid rendering render 9`] = `
"+----+---------+--------+
|  [44m[30m5[39m[49m |  [43m[30m3[39m[49m    [43m[30m3[39m[49m |  [35m4[39m   [35m4[39m |
+----+---------+----+---+
| [96m13[39m |  [106m[30m2[39m[49m    [106m[30m2[39m[49m |  [34m9[39m | [102m[30m8[39m[49m |
+----+---------+----+---+
| [31m10[39m | [104m[30m12[39m[49m   [104m[30m12[39m[49m | [94m11[39m | [93m7[39m |
|    +----+----+----+   |
| [31m10[39m | [101m[30m15[39m[49m | [33m14[39m |  [103m[30m0[39m[49m | [93m7[39m |
+----+----+    |    +---+
|  [46m[30m6[39m[49m |  [95m1[39m | [33m14[39m |  [103m[30m0[39m[49m   [103m[30m0[39m[49m |
+----+----+----+--------+

room 0 size=3 cells=18,23,24
room 1 size=1 cells=21
room 2 size=2 cells=6,7
room 3 size=2 cells=1,2
room 4 size=2 cells=3,4
room 5 size=1 cells=0
room 6 size=1 cells=20
room 7 size=2 cells=14,19
room 8 size=1 cells=9
room 9 size=1 cells=8
room 10 size=2 cells=10,15
room 11 size=1 cells=13
room 12 size=2 cells=11,12
room 13 size=1 cells=5
room 14 size=2 cells=17,22
room 15 size=1 cells=16"
`;

exports[`Grid rendering render 10`] = `
"+----+---------+--------+
|  5 |  3    3 |  4   4 |
+----+---------+----+---+
| 13 |  2    2 |  9 | 8 |
+----+---------+----+---+
| 10 | 12   12 | 11 | 7 |
|    +----+----+----+   |
| 10 | 15 | 14 |  0 | 7 |
+----+----+    |    +---+
|  6 |  1 | 14 |  0   0 |
+----+----+----+--------+

room 0 size=3 cells=18,23,24
room 1 size=1 cells=21
room 2 size=2 cells=6,7
room 3 size=2 cells=1,2
room 4 size=2 cells=3,4
room 5 size=1 cells=0
room 6 size=1 cells=20
room 7 size=2 cells=14,19
room 8 size=1 cells=9
room 9 size=1 cells=8
room 10 size=2 cells=10,15
room 11 size=1 cells=13
room 12 size=2 cells=11,12
room 13 size=1 cells=5
room 14 size=2 cells=17,22
room 15 size=1 cells=16"
`;

exports[`Grid rendering render 11`] = `
"+------------------+------------+----+----+----+
|  [33m5[39m    [33m5[39m    [33m5[39m   [33m5[39m | [35m3[39m   [35m3[39m    [35m3[39m | [101m[30m13[39m[49m |  [36m4[39m |  [103m[30m6[39m[49m |
|    +----+--------+-------+----+    |    |    |
|  [33m5[39m |  [46m[30m9[39m[49m |  [95m8[39m   [95m8[39m | [45m[30m2[39m[49m   [45m[30m2[39m[49m | [41m[30m12[39m[49m | [101m[30m13[39m[49m |  [36m4[39m |  [103m[30m6[39m[49m |
+----+    +----+   +---+   |    +----+    +----+
|  [46m[30m9[39m[49m    [46m[30m9[39m[49m | [43m[30m15[39m[49m | [95m8[39m   [95m8[39m | [45m[30m2[39m[49m | [41m[30m12[39m[49m | [106m[30m11[39m[49m |  [36m4[39m | [93m14[39m |
|    +----+    +---+---+---+    |    +----+    |
|  [46m[30m9[39m[49m | [32m10[39m | [43m[30m15[39m[49m | [94m1[39m | [92m7[39m   [92m7[39m | [41m[30m12[39m[49m | [106m[30m11[39m[49m   [106m[30m11[39m[49m | [93m14[39m |
+----+    |    |   +---+   +----+---------+    |
| [32m10[39m   [32m10[39m | [43m[30m15[39m[49m | [94m1[39m   [94m1[39m | [92m7[39m |  [44m[30m0[39m[49m    [44m[30m0[39m[49m    [44m[30m0[39m[49m | [93m14[39m |
+---------+----+-------+---+--------------+----+

room 0 size=3 cells=46,47,48
room 1 size=3 cells=33,43,44
room 2 size=3 cells=14,15,25
room 3 size=3 cells=4,5,6
room 4 size=3 cells=8,18,28
room 5 size=5 cells=0,1,2,3,10
room 6 size=2 cells=9,19
room 7 size=3 cells=34,35,45
room 8 size=4 cells=12,13,23,24
room 9 size=4 cells=11,20,21,30
room 10 size=3 cells=31,40,41
room 11 size=3 cells=27,37,38
room 12 size=3 cells=16,26,36
room 13 size=2 cells=7,17
room 14 size=3 cells=29,39,49
room 15 size=3 cells=22,32,42"
`;

exports[`Grid rendering render 12`] = `
"+------------------+------------+----+----+----+
|  5    5    5   5 | 3   3    3 | 13 |  4 |  6 |
|    +----+--------+-------+----+    |    |    |
|  5 |  9 |  8   8 | 2   2 | 12 | 13 |  4 |  6 |
+----+    +----+   +---+   |    +----+    +----+
|  9    9 | 15 | 8   8 | 2 | 12 | 11 |  4 | 14 |
|    +----+    +---+---+---+    |    +----+    |
|  9 | 10 | 15 | 1 | 7   7 | 12 | 11   11 | 14 |
+----+    |    |   +---+   +----+---------+    |
| 10   10 | 15 | 1   1 | 7 |  0    0    0 | 14 |
+---------+----+-------+---+--------------+----+

room 0 size=3 cells=46,47,48
room 1 size=3 cells=33,43,44
room 2 size=3 cells=14,15,25
room 3 size=3 cells=4,5,6
room 4 size=3 cells=8,18,28
room 5 size=5 cells=0,1,2,3,10
room 6 size=2 cells=9,19
room 7 size=3 cells=34,35,45
room 8 size=4 cells=12,13,23,24
room 9 size=4 cells=11,20,21,30
room 10 size=3 cells=31,40,41
room 11 size=3 cells=27,37,38
room 12 size=3 cells=16,26,36
room 13 size=2 cells=7,17
room 14 size=3 cells=29,39,49
room 15 size=3 cells=22,32,42"
`;

exports[`Grid rendering render 13`] = `
"+--------------+---------+
|  [91m5[39m    [91m5[39m    [91m5[39m |  [105m[30m4[39m[49m    [105m[30m4[39m[49m |
+--------------+    +----+
|  [103m[30m3[39m[49m    [103m[30m3[39m[49m    [103m[30m3[39m[49m |  [105m[30m4[39m[49m |  [32m6[39m |
+----+---------+    |    |
|  [41m[30m2[39m[49m | [43m[30m13[39m[49m   [43m[30m13[39m[49m |  [105m[30m4[39m[49m |  [32m6[39m |
|    +----+    +----+    |
|  [41m[30m2[39m[49m    [41m[30m2[39m[49m | [43m[30m13[39m[49m |  [31m8[39m |  [32m6[39m |
|    +----+----+    |    |
|  [41m[30m2[39m[49m |  [44m[30m9[39m[49m    [44m[30m9[39m[49m |  [31m8[39m |  [32m6[39m |
+----+    +----+    +----+
|  [44m[30m9[39m[49m    [44m[30m9[39m[49m | [46m[30m15[39m[49m |  [31m8[39m | [42m[30m14[39m[49m |
+---------+    +----+    |
| [94m12[39m   [94m12[39m | [46m[30m15[39m[49m | [93m11[39m | [42m[30m14[39m[49m |
+----+    +----+    |    |
|  [96m7[39m | [94m12[39m | [93m11[39m   [93m11[39m | [42m[30m14[39m[49m |
|    +----+----+----+----+
|  [96m7[39m | [92m10[39m   [92m10[39m |  [35m1[39m    [35m1[39m |
|    +---------+----+    |
|  [96m7[39m |  [106m[30m0[39m[49m    [106m[30m0[39m[49m    [106m[30m0[39m[49m |  [35m1[39m |
+----+--------------+----+

room 0 size=3 cells=46,47,48
room 1 size=3 cells=43,44,49
room 2 size=4 cells=10,15,16,20
room 3 size=3 cells=5,6,7
room 4 size=4 cells=3,4,8,13
room 5 size=3 cells=0,1,2
room 6 size=4 cells=9,14,19,24
room 7 size=3 cells=35,40,45
room 8 size=3 cells=18,23,28
room 9 size=4 cells=21,22,25,26
room 10 size=2 cells=41,42
room 11 size=3 cells=33,37,38
room 12 size=3 cells=30,31,36
room 13 size=3 cells=11,12,17
room 14 size=3 cells=29,34,39
room 15 size=2 cells=27,32"
`;

exports[`Grid rendering render 14`] = `
"+--------------+---------+
|  5    5    5 |  4    4 |
+--------------+    +----+
|  3    3    3 |  4 |  6 |
+----+---------+    |    |
|  2 | 13   13 |  4 |  6 |
|    +----+    +----+    |
|  2    2 | 13 |  8 |  6 |
|    +----+----+    |    |
|  2 |  9    9 |  8 |  6 |
+----+    +----+    +----+
|  9    9 | 15 |  8 | 14 |
+---------+    +----+    |
| 12   12 | 15 | 11 | 14 |
+----+    +----+    |    |
|  7 | 12 | 11   11 | 14 |
|    +----+----+----+----+
|  7 | 10   10 |  1    1 |
|    +---------+----+    |
|  7 |  0    0    0 |  1 |
+----+--------------+----+

room 0 size=3 cells=46,47,48
room 1 size=3 cells=43,44,49
room 2 size=4 cells=10,15,16,20
room 3 size=3 cells=5,6,7
room 4 size=4 cells=3,4,8,13
room 5 size=3 cells=0,1,2
room 6 size=4 cells=9,14,19,24
room 7 size=3 cells=35,40,45
room 8 size=3 cells=18,23,28
room 9 size=4 cells=21,22,25,26
room 10 size=2 cells=41,42
room 11 size=3 cells=33,37,38
room 12 size=3 cells=30,31,36
room 13 size=3 cells=11,12,17
room 14 size=3 cells=29,34,39
room 15 size=2 cells=27,32"
`;

exports[`Grid rendering render 15`] = `
"+------------+---------+--------------+---------+
|  [105m[30m3[39m[49m   [105m[30m3[39m[49m   [105m[30m3[39m[49m |  [44m[30m5[39m[49m    [44m[30m5[39m[49m |  [36m4[39m    [36m4[39m    [36m4[39m |  [101m[30m6[39m[49m    [101m[30m6[39m[49m |
|            +----+    +----+         |         |
|  [105m[30m3[39m[49m   [105m[30m3[39m[49m   [105m[30m3[39m[49m    [105m[30m3[39m[49m |  [44m[30m5[39m[49m    [44m[30m5[39m[49m |  [36m4[39m    [36m4[39m |  [101m[30m6[39m[49m    [101m[30m6[39m[49m |
+----+-------+----+         |         +----+    |
| [35m13[39m | [41m[30m2[39m[49m   [41m[30m2[39m[49m |  [44m[30m5[39m[49m    [44m[30m5[39m[49m    [44m[30m5[39m[49m |  [36m4[39m    [36m4[39m |  [103m[30m9[39m[49m |  [101m[30m6[39m[49m |
|    |       +---------+----+    +----+    |    |
| [35m13[39m | [41m[30m2[39m[49m   [41m[30m2[39m[49m    [41m[30m2[39m[49m    [41m[30m2[39m[49m | [91m14[39m |  [36m4[39m |  [103m[30m9[39m[49m    [103m[30m9[39m[49m |  [101m[30m6[39m[49m |
|    |   +---+---------+    +----+         +----+
| [35m13[39m | [41m[30m2[39m[49m | [104m[30m8[39m[49m | [43m[30m10[39m[49m   [43m[30m10[39m[49m | [91m14[39m |  [103m[30m9[39m[49m    [103m[30m9[39m[49m    [103m[30m9[39m[49m    [103m[30m9[39m[49m |
|    +---+   |         |    +---------+---------+
| [35m13[39m | [104m[30m8[39m[49m   [104m[30m8[39m[49m | [43m[30m10[39m[49m   [43m[30m10[39m[49m | [91m14[39m   [91m14[39m   [91m14[39m | [42m[30m15[39m[49m   [42m[30m15[39m[49m |
|    |       |    +----+----+    +----+         |
| [35m13[39m | [104m[30m8[39m[49m   [104m[30m8[39m[49m | [43m[30m10[39m[49m | [33m12[39m | [46m[30m11[39m[49m | [91m14[39m |  [96m7[39m | [42m[30m15[39m[49m   [42m[30m15[39m[49m |
|    |       |    |    |    +----+    |         |
| [35m13[39m | [104m[30m8[39m[49m   [104m[30m8[39m[49m | [43m[30m10[39m[49m | [33m12[39m | [46m[30m11[39m[49m |  [96m7[39m    [96m7[39m | [42m[30m15[39m[49m   [42m[30m15[39m[49m |
|    +-------+----+    |    |    +----+---------+
| [35m13[39m | [32m0[39m   [32m0[39m | [33m12[39m   [33m12[39m | [46m[30m11[39m[49m |  [96m7[39m |  [45m[30m1[39m[49m    [45m[30m1[39m[49m    [45m[30m1[39m[49m |
+----+       +---------+    |    |              |
|  [32m0[39m   [32m0[39m   [32m0[39m    [32m0[39m    [32m0[39m | [46m[30m11[39m[49m |  [96m7[39m |  [45m[30m1[39m[49m    [45m[30m1[39m[49m    [45m[30m1[39m[49m |
+----------------------+----+----+--------------+

room 0 size=7 cells=81,82,90,91,92,93,94
room 1 size=6 cells=87,88,89,97,98,99
room 2 size=7 cells=21,22,31,32,33,34,41
room 3 size=7 cells=0,1,2,10,11,12,13
room 4 size=8 cells=5,6,7,16,17,26,27,36
room 5 size=7 cells=3,4,14,15,23,24,25
room 6 size=6 cells=8,9,18,19,29,39
room 7 size=5 cells=67,76,77,86,96
room 8 size=7 cells=42,51,52,61,62,71,72
room 9 size=7 cells=28,37,38,46,47,48,49
room 10 size=6 cells=43,44,53,54,63,73
room 11 size=4 cells=65,75,85,95
room 12 size=4 cells=64,74,83,84
room 13 size=7 cells=20,30,40,50,60,70,80
room 14 size=6 cells=35,45,55,56,57,66
room 15 size=6 cells=58,59,68,69,78,79"
`;

exports[`Grid rendering render 16`] = `
"+------------+---------+--------------+---------+
|  3   3   3 |  5    5 |  4    4    4 |  6    6 |
|            +----+    +----+         |         |
|  3   3   3    3 |  5    5 |  4    4 |  6    6 |
+----+-------+----+         |         +----+    |
| 13 | 2   2 |  5    5    5 |  4    4 |  9 |  6 |
|    |       +---------+----+    +----+    |    |
| 13 | 2   2    2    2 | 14 |  4 |  9    9 |  6 |
|    |   +---+---------+    +----+         +----+
| 13 | 2 | 8 | 10   10 | 14 |  9    9    9    9 |
|    +---+   |         |    +---------+---------+
| 13 | 8   8 | 10   10 | 14   14   14 | 15   15 |
|    |       |    +----+----+    +----+         |
| 13 | 8   8 | 10 | 12 | 11 | 14 |  7 | 15   15 |
|    |       |    |    |    +----+    |         |
| 13 | 8   8 | 10 | 12 | 11 |  7    7 | 15   15 |
|    +-------+----+    |    |    +----+---------+
| 13 | 0   0 | 12   12 | 11 |  7 |  1    1    1 |
+----+       +---------+    |    |              |
|  0   0   0    0    0 | 11 |  7 |  1    1    1 |
+----------------------+----+----+--------------+

room 0 size=7 cells=81,82,90,91,92,93,94
room 1 size=6 cells=87,88,89,97,98,99
room 2 size=7 cells=21,22,31,32,33,34,41
room 3 size=7 cells=0,1,2,10,11,12,13
room 4 size=8 cells=5,6,7,16,17,26,27,36
room 5 size=7 cells=3,4,14,15,23,24,25
room 6 size=6 cells=8,9,18,19,29,39
room 7 size=5 cells=67,76,77,86,96
room 8 size=7 cells=42,51,52,61,62,71,72
room 9 size=7 cells=28,37,38,46,47,48,49
room 10 size=6 cells=43,44,53,54,63,73
room 11 size=4 cells=65,75,85,95
room 12 size=4 cells=64,74,83,84
room 13 size=7 cells=20,30,40,50,60,70,80
room 14 size=6 cells=35,45,55,56,57,66
room 15 size=6 cells=58,59,68,69,78,79"
`;
